--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .attribution { font-size: 11px; text-align: center; }
+        .attribution a { color: hsl(228, 45%, 44%); }
+      </style>
 </head>
 <body>
-    
+    <section>
+        <div class="motherContainer">
+            <div></div>
+            <img src="/images/image-victor.jpg" alt="">
+            <div>
+                <p>victor crest <span>26</span></p>
+                <p>London</p>
+            </div>
+            <ul>
+                <li>
+                    <h1>80K</h1>
+                    <p>Followers</p>
+                </li>
+                <li>
+                    <h1>803K</h1>
+                    <p>Likes</p>
+                </li>
+                <li>
+                    <h1>1.4K</h1>
+                    <p>Photos</p>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
