--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section>
         <div class="motherContainer">
-            <div></div>
+            <div class="background"></div>
             <img src="/images/image-victor.jpg" alt="">
             <div>
                 <p>victor crest <span>26</span></p>
