--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section>
         <div class="motherContainer">
             <div class="background"></div>
-            <img src="/images/image-victor.jpg" alt="">
-            <div>
-                <p>victor crest <span>26</span></p>
-                <p>London</p>
+            <div class="img_container"><img src="/images/image-victor.jpg" alt=""></div>
+            <div class="txt_container">
+                <p>victor crest <span style="color: hsl(0, 0%, 59%); font-weight: 500; padding-inline-start: 0.5rem;">26</span></p>
+                <p style="color: hsl(0, 0%, 59%); padding-top: 0.5rem; font-weight: 500;">London</p>
             </div>
             <ul>
                 <li>
