--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
-        .attribution { font-size: 11px; text-align: center; }
+        .attribution { font-size: 11px; text-align: center;}
         .attribution a { color: hsl(228, 45%, 44%); }
       </style>
 </head>
@@ -38,5 +38,9 @@
             </ul>
         </div>
     </section>
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="//www.linkedin.com/in/tomisin-babalola-ba25b9235">Tomisin Babalola</a>.
+      </div>
 </body>
 </html>
